Shipit: Extra hawk header + Bugzilla auth stored in TC secrets.
