# src/shipit_dashboard/shipit_dashboard/api.py
@@ -5,79 +5,13 @@
 from __future__ import absolute_import
 
 from shipit_dashboard.models import BugAnalysis
+from shipit_dashboard.serializers import serialize_analysis
 from sqlalchemy.orm.exc import NoResultFound
-from flask_login import login_required
-from flask import abort
+from flask_login import login_required, current_user
+from flask import abort, request
+from datetime import datetime, timedelta
 
-def _serialize_bug(bug):
-    """
-    Helper to serialize a bug from its payload
-    """
-    payload = bug.payload_data
-    if not payload:
-        raise Exception('Missing payload')
-    bug_data = payload.get('bug')
-    analysis = payload.get('analysis')
-    if not bug_data or not analysis:
-        raise Exception('Missing Bug data or Analysis')
-
-    # Build uplift
-    uplift = None
-    if analysis.get('uplift_comment') and analysis.get('uplift_author'):
-        author = analysis['uplift_author']
-        comment = analysis['uplift_comment']
-        uplift = {
-            'id' : comment['id'],
-            'author' : {
-                'email' : author['name'], # weird :/
-                'real_name' : author['real_name'],
-            },
-            'comment' : comment['raw_text'],
-        }
-
-    status_base_flag = 'cf_status_'
-
-    return {
-        # Base
-        'id': bug.id,
-        'bugzilla_id': bug.bugzilla_id,
-        'summary' : bug_data['summary'],
-        'keywords' : bug_data['keywords'],
-        'flags_status' : dict([(k.replace(status_base_flag, '', 1) ,v) for k,v in bug_data.items() if k.startswith(status_base_flag)]),
-
-
-        # Contributor structures
-        'creator' : analysis['users']['creator'],
-        'assignee' : analysis['users']['assignee'],
-        'reviewers' : [{
-            'email' : r,
-            'real_name' : r,
-        } for r in analysis['users']['reviewers']],
-
-        # Stats
-        'changes_size' : analysis.get('changes_size', 0),
-
-        # Uplift request
-        'uplift' : uplift,
-    }
-
-def _serialize_analysis(analysis, full=True):
-    """
-    Helper to serialize an analysis
-    """
-    out = {
-        'id': analysis.id,
-        'name': analysis.name,
-        'count' : len(analysis.bugs),
-    }
-
-    if full:
-        # Add bugs
-        out['bugs'] = [_serialize_bug(b) for b in analysis.bugs if b.payload]
-    else:
-        out['bugs'] = []
-
-    return out
+BUGZILLA_SECRET = 'garbage/shipit/bugzilla'
 
 @login_required
 def list_analysis():
@@ -85,7 +19,7 @@ def list_analysis():
     List all available analysis
     """
     all_analysis = BugAnalysis.query.all()
-    return [_serialize_analysis(analysis, False) for analysis in all_analysis]
+    return [serialize_analysis(analysis, False) for analysis in all_analysis]
 
 @login_required
 def get_analysis(analysis_id):
@@ -100,4 +34,56 @@ def get_analysis(analysis_id):
         abort(404)
 
     # Build JSON output
-    return _serialize_analysis(analysis)
+    return serialize_analysis(analysis)
+
+@login_required
+def get_bugzilla_auth():
+    """
+    Checks if current user has an available
+    and valid bugzilla auth token
+    stored in Taskcluster secrets
+    """
+    secrets = current_user.taskcluster_secrets()
+    auth_secret = secrets.get(BUGZILLA_SECRET)
+    if auth_secret:
+        # TODO : Check the auth is still valid
+        return {
+            'authenticated': True,
+            'message' : 'Valid authentication for {}'.format(auth_secret['secret']['login']),
+        }
+
+    return {
+        'authenticated': False,
+        'message' : 'No authentication stored.',
+    }
+
+@login_required
+def update_bugzilla_auth():
+    """
+    Update bugzilla token & login
+    in Taskcluster secrets
+    """
+    token = request.json.get('token')
+    login = request.json.get('login')
+    if not (token and login):
+      raise Exception('Missing token and login')
+
+    # TODO : Check the auth is still valid
+
+    # Store the auth in secret
+    payload = {
+        'secret': {
+            'token' : token,
+            'login' : login,
+        },
+        'expires' : datetime.now() + timedelta(days=365)
+    }
+    secrets = current_user.taskcluster_secrets()
+    resp = secrets.set(BUGZILLA_SECRET, payload)
+    print(resp)
+
+    return {
+        'authenticated': True,
+        'message' : 'Valid authentication for {}.'.format(login),
+    }
+
